--- a/css/main.css
+++ b/css/main.css
@@ -9,14 +9,105 @@
 	flex-direction: column;
 }
 
-.upper-header {
+.upper-side {
 	width: 100%;
 	height: 50px;
 	margin-top: -7px;
 	background-color: #4063e0;
 }
 
-.bottom-header {
+.bottom-side {
+	display: flex;
+	width: 100%;
+}
+
+.row {
+	display: flex;
+	flex-wrap: wrap;
+	width: 100%;
+}
+
+.logo {
+	width: 16%;
+}
+
+.links-container {
+	max-width: 84%;
+	width: 100%;
+	/* position: static; */
+}
+
+.navbar {
+	display: flex;
+	align-items: center;
+	vertical-align: middle;
+}
+
+.nav {
+	display: flex;
+	flex-wrap: wrap;
+	list-style: none;
+}
+
+#myDiv {
+	display: block;
+}
+
+.nav ul {
+	margin: 20px;
+	position: relative;
+	float: left;
+}
+
+.nav ul li {
+	float: left;
+	list-style: none;
+}
+
+.nav ul li a.front-menu {
+	position: relative;
+	font-size: 14px;
+	font-family: sans-serif;
+	font-weight: 400;
+	line-height: 20px;
+	letter-spacing: 0;
+	text-align: right;
+	cursor: pointer;
+	background-color: red;
+	padding: 20px 20px;
+}
+
+.nav ul li ul {
+	display: none;
+	position: absolute;
+	width: 100%;
+}
+
+.dropdown-content {
+	position: absolute;
+	width: 1100px;
+	padding: 25px 10px;
+	background-color: bisque;
+	left: -200px;
+}
+
+
+.nav ul li ul li {
+	width: 23%;
+}
+
+.nav ul li ul li .font {
+	color: black;
+	font-size: 14px;
+	line-height: 19px;
+}
+
+.nav ul li ul li ul {
+	position: relative;
+	width: 100%;
+}
+
+/*.bottom-header {
 	width: 100%;
 	height: 75px;
 	display: flex;
@@ -41,18 +132,6 @@
 
 }
 
-/* .navbar nav ul {
-	list-style-type: none;
-	display: flex;
-	flex-direction: row;
-
-}
-
-.navbar nav ul li {
-	padding-right: 60px;
-	cursor: pointer;
-} */
-
 .menu-main {
 	position: relative;
 }
@@ -74,16 +153,6 @@
 	left: 0;
 
 }
-
-/* .dropdown-content {
-	display: none;
-	position: absolute;
-	width: 1260px;
-	left: -200px;
-	height: auto;
-	max-height: 800px;
-	background-color: pink;
-} */
 
 .dropdown-content a {
 	display: block;
@@ -110,14 +179,8 @@
 	margin-top: 0px;
 	background-color: pink;
 	border-radius: 15px;
-	/* margin-right: 50px; */
 }
-/* .link-one {
-	width: 100%;
-	position: absolute;
-	left: 0;
-	background-color: antiquewhite;
-} */
+
 #startup-link {
 	
 }
@@ -152,7 +215,6 @@
 
 .dropdown-content ul li a {
 	text-decoration: none;
-	/* color: black; */
 }
 
 .dropdown-content ul li .font {
@@ -180,4 +242,10 @@
 	body {
 	  background-color: lightgreen;
 	}
+} */
+
+.hero-container {
+	background-color: burlywood;
+	width: 100%;
+
 }
