--- a/css/main.css
+++ b/css/main.css
@@ -46,35 +46,43 @@ body {
 }
 
 .upper-side {
-	/* width: 100%; */
+	width: 100%; 
 	height: 40px;
 	line-height: 40px;
 	/* margin-top: -7px; */
 	background-color: #4063e0;
+	display: flex;
 }
 
 .upper-row {
 	width: 100%;
 	display: flex;
 	flex-wrap: wrap;
-	max-width: 1200px;
-	margin-left: 115px;
+	/* max-width: 1200px; */
+	margin-left: 100px;
+    margin-right: 100px;
 
 
 }
 
 .left-side {
-	position: relative;
+	/* position: relative; */
 	max-width: 60%;
 	width: 100%;
 }
 
 .left-side ul {
 	margin: 0;
+	float: left;
+	padding-left: 60px;
+}
+.left-info {
+	color: white;
+	font-size: 15px;
 }
 
 .left-side ul li {
-	list-style-type: none;
+	list-style: none;
 	display: inline-block;
 	border-right: 1px solid white;
 	padding-right: 20px;
@@ -84,14 +92,13 @@ body {
 .left-side ul li:first-child {
 	border-left: 1px solid white;
 }
-
-.left-info {
+.left-side ul li a {
 	color: white;
-	font-size: 15px;
+	text-decoration: none;
 }
 
 .right-side {
-	position: relative;
+	/* position: relative; */
 	max-width: 40%;
 	width: 100%;
 }
@@ -99,7 +106,7 @@ body {
 .right-side ul {
 	float: right;
 	margin: 0;
-	padding-right: 50px;
+	padding-right: 60px;
 }
 
 .right-side ul li {
@@ -115,6 +122,7 @@ body {
 
 .right-side ul li a {
 	text-decoration: none;
+	color: white;
 }
 
 
