--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@ body {
 	margin: 0;
 	width: 100%;
 	height: 100vh;
-	font-family: poppins, sans-serif;
+	font-family: sans-serif;
 }
 
 .fa {
@@ -135,50 +135,34 @@ body {
 	display: flex;
 	flex-wrap: wrap;
 	width: 100%;
-	margin-left: 10px;
-	justify-content: center;
+	padding: 0 131px;
+	/* margin-left: 10px; */
+	justify-content: space-between;
 }
 
 .logo {
-	width: 25%;
-	margin-left: 0px;
+	/* width: 25%; */
+	/* margin-left: 0px; */
+	display: flex;
+    align-items: center;
+    justify-content: center;
 }
-
-/* .top-containeer {
-display: flex;
-flex-direction: row;
-width: 100%;
-}
-
-.header-info {
-display: flex;
-flex-direction: column;
-max-width: 75%;
-width: 100%;
-}
-
-.blue-info {
-background-color: blue;
-height: 45px;
-}
-
-.bottom-side {
-	
-} */
 
 .logo img {
 	width: 250px;
 	height: 95px;
-	margin-bottom: -4px;
+	margin-bottom: 0px;
 	display: inline-block;
-	padding-left: 30px;
+	/* padding-left: 30px; */
 	/* margin-bottom: -3px; */
 }
 
 .links-container {
-	max-width: 63%;
-	width: 100%;
+	/* max-width: 63%;
+	width: 100%; */
 	display: flex;
+	align-items: center;
+    justify-content: center;
 	/* position: static; */
 }
 
@@ -186,7 +170,7 @@ height: 45px;
 	display: flex;
 	align-items: center;
 	vertical-align: middle;
-	margin-left: 140px;
+	 /* margin-left: 287px; */
 }
 
 .nav {
@@ -200,10 +184,10 @@ height: 45px;
 }
 
 .nav ul {
-	margin: 27px;
+	margin: 27px 0;
 	position: relative;
 	float: left;
-	margin-left: 10px;
+	/* margin-left: 10px; */
 }
 
 .nav ul li {
@@ -232,23 +216,6 @@ height: 45px;
 	border-radius: 5px;
 }
 
-/* .nav ul li a.front-menu:before {
-	content: "";
-	position: absolute;
-	background-color: #2e55df;
-	height: 5px;
-	width: 100%;
-	top: auto;
-	bottom: 0;
-	left: 0;
-	right: 0;
-	border-radius: 2.5px;
-	opacity: 0;
-}
-::before {
-	box-sizing: border-box;
-} */
-
 .nav ul li ul {
 	display: none;
 	position: absolute;
@@ -265,9 +232,22 @@ height: 45px;
 	left: -350px;
 }
 
-
 .nav ul li ul li {
 	width: 23%;
+}
+
+.nav ul li ul li .font {
+	color: #222222;
+	font-size: 15px;
+	letter-spacing: 0;
+	line-height: 19px;
+	font-weight: 600;
+	border-bottom: 1px solid #e4e4e4;
+	padding-bottom: 10px;
+	margin-bottom: 5px;
+	display: table;
+	font-family: "sans-serif";
+	text-decoration: none;
 }
 
 .nav ul li ul li ul li {
@@ -282,21 +262,9 @@ height: 45px;
 	letter-spacing: 0;
 	line-height: 30px;
 	font-weight: 400;
-	font-family: "AvenirLTStd-Roman";
+	font-family: "sans-serif";
 	text-decoration: none;
-}
 
-.nav ul li ul li .font {
-	color: #222222;
-	font-size: 14px;
-	letter-spacing: 0;
-	line-height: 19px;
-	border-bottom: 1px solid #e4e4e4;
-	padding-bottom: 10px;
-	margin-bottom: 5px;
-	display: table;
-	font-family: "Avenir-Black";
-	text-decoration: none;
 }
 
 .nav ul li ul li ul {
@@ -314,14 +282,17 @@ height: 45px;
 	color: #072160;
 	border-radius: 6px;
 	background-color: #f2f2f2;
-	font-family: "Avenir-Black";
+	font-family: "sans-serif";
+	background-color: white;
+	transition: all 0.5s ease 0s;
+	font-weight: 600;
 }
 
-@media screen and (max-width: 1000px) {
+/* @media screen and (max-width: 1000px) {
 	body {
 		background-color: lightgreen;
 	}
-}
+} */
 
 .hero-container {
 	/* background-color: #4063e0; */
@@ -337,14 +308,18 @@ height: 45px;
 	background-size: cover;
 	width: 100%;
 	height: 100%;
+	display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 
 }
 
 .tagline {
-	padding-top: 198px;
+	/* padding-top: 198px; */
 	/* padding-left: 100px; */
+	margin-top: -15px;
 	font-size: 30px;
-    /* margin-left: 136px; */
 	align-items: center;
     display: flex;
     flex-direction: column;
@@ -357,13 +332,33 @@ height: 45px;
 }
 
 .tagline h1 {
-	/* color: #1537b2; */
-	color: #0a2482;;
+	/* color: #0a2482; */
+	color: #fff;
 	/* margin-bottom: -25px  */
 }
 
-
-
 .tagline-one {
 	margin-bottom: -8px 
+}
+
+.contact-button {
+
+}
+
+.contact-button button {
+	width: 200px;
+    height: 45px;
+    font-size: 15SSpx;
+    font-weight: 700;
+    letter-spacing: 2px;
+    border-radius: 4px;
+    border-style: none;
+    padding: 12px 16px;
+	cursor: pointer;
+}
+
+.contact-button button:hover {
+    background-color: transparent;
+    border: #fff 2px solid;
+	color: #fff;
 }
