--- a/css/mobile.css
+++ b/css/mobile.css
@@ -27,6 +27,10 @@
         border-right: none;
     }
 
+    .bottom-side {
+        position: relative;
+    }
+
     
 }   
 
@@ -55,11 +59,12 @@
         position: absolute;
         display: block;
         width: auto;
-        padding: 18px 20px;
+        padding: 17px 20px;
         border: 1px solid black;
-        right: 20px;
+        right: 35px;
         left: auto;
-        top: 51px;
+        top: 20%;
+        vertical-align: middle;
     }
 
     .nav-bar-menu-mobile span {
