--- a/css/main.css
+++ b/css/main.css
@@ -161,7 +161,7 @@ body {
 	/* margin-left: 0px; */
 	display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
 }
 
 .logo img {
