--- a/css/main.css
+++ b/css/main.css
@@ -19,7 +19,7 @@ body {
 .fa {
 	align-items: center;
 	text-align: center;
-	text-decoration: none;
+	text-decoration: none !important;
 }
 
 .fa-facebook {
