--- a/css/mobile.css
+++ b/css/mobile.css
@@ -45,7 +45,7 @@
     }
 
     .app-content {
-        padding-top: 10px;
+        padding-top: 0;
     }
 
     .logo {
@@ -85,6 +85,7 @@
 
     #myDiv {
         display: none;
+        padding: 10px 0px;
     }
 
     .nav-item > ul {
