--- a/css/mobile.css
+++ b/css/mobile.css
@@ -76,6 +76,10 @@
         display: inline-grid;
     }
 
+    .navlink > div {
+        display: flex;
+    }
+
     .expand{
         display: flex;
     }
