--- a/css/main.css
+++ b/css/main.css
@@ -665,14 +665,15 @@ input[type=submit]:hover {
 .icons-container {
 	display: flex;
 	flex-wrap: wrap;
+	column-gap: 30px;
 	width: 100%;
-	justify-content: space-evenly;
+	justify-content: center;
     /* padding: 0px 20px; */
 }
 
 .vertival-image {
 	/* width: 50%; */
-	min-width: 400px;
+	max-width: 450px;
 	padding: 1px;
 	/* padding-left: 50px; */
 	/* padding-right: 50px; */
@@ -688,6 +689,7 @@ input[type=submit]:hover {
 
 .icons-for-best {
 	/* width: 50%; */
+	max-width: 450px;
 	padding-left: 50px;
 	display: flex;
 	flex-direction: column;
